# terminal-preferences

./: .bash_aliases  .bashrc  .gitconfig  .profile  .vimrc  CMakeLists.txt  copy_configs.sh  initCppProject.sh
